Refactored OpenAPI file, fixed tests execution.
