# api/resources/openapi_v1_0_0.yaml
@@ -1,12 +1,16 @@
-openapi: 3.0.0
+openapi: 3.0.2
+
+servers:
+-   url: /v1
 
 info:
     title: Gazola Machine Learning REST API
     description: Model trained to predict apartment's prices in São Paulo city
+    license: {
+        "name": "MIT License",
+        "url": "https://github.com/furansa/gazola-ml-python-rest/blob/master/LICENSE"
+    }
     version: 1.0.0
-
-servers:
--   url: /v1
 
 paths:
     /status:
@@ -22,9 +26,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                type: array
-                                items:
-                                    type: string
+                                properties:
+                                    status:
+                                        type: string
+                                        example: healthy
+                                    version:
+                                        type: string
+                                        example: 1.0.0
     /predict:
         post:
             summary: Predict price based on given features
@@ -32,31 +40,32 @@ paths:
             tags:
                 - Prediction
             operationId: controllers.prediction.predict
-            parameters:
-                - name: dataset
-                  in: body
-                  description: Set of data to feed the model
-                  required: True
-                  schema:
-                      type: object
-                      properties:
-                          age:
-                              type: integer
-                              description: Apartment's age in years
-                          size:
-                              type: integer
-                              description: Apartment's size in squared meters (m2)
-                      example:
-                          age: 25
-                          size: 100
+            requestBody:
+                description: Set of data to feed the model
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            properties:
+                                age:
+                                    type: integer
+                                    format: int64
+                                    example: 25
+                                size:
+                                    type: number
+                                    format: float
+                                    example: 100.00
+                            required:
+                                - age
+                                - size
             responses:
                 200:
                     description: Successful operation
                     content:
                         application/json:
                             schema:
-                                type: array
-                                items:
-                                    type: string
-                            example:
-                                price: 1000.00
+                                properties:
+                                    price:
+                                        type: number
+                                        format: float
+                                        example: 1000.00
